# OpenWebMath

./: README.md
release/: push-to-pypi.sh
text_extraction/: pyproject.toml
text_extraction/text_extract/: extract.py  utils.py
